kustomize/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldpinger
  namespace: default
  labels:
    app: goldpinger
spec:
  ingressClassName: nginx
  rules:
  - host: goldpinger.stone.com.br
    http:
      paths:
      - backend:
          service:
            name: goldpinger
            port:
              number: 8080
        path: /
        pathType: Prefix
